codepkg/objects/Project_Cost_Line_Item__c.object
<CustomObject>
    <fields>
        <fullName>Application_Extension_Id__c</fullName>
        <formula>Project_Cost__r.Project_Budget__r.Application_Extension__c</formula>
        <label>Application Extension Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Application_Id__c</fullName>
        <formula>IF( ISBLANK(Project_Cost__r.Project_Site__r.Application__c)  , Project_Cost__r.Project_Budget__r.Application__c , Project_Cost__r.Project_Site__r.Application__c)</formula>
        <label>Application Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cost_Estimate_Narra__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Cost Estimate Narrative</label>
        <length>1200</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Cost_Estimate_Total__c</fullName>
        <description>Used in Management Cost Budget Breakdown as an Amount</description>
        <label>Cost Estimate Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Cost_Type__c</fullName>
        <label>Cost Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Public Outreach</fullName>
                </value>
                <value>
                    <fullName>Survey</fullName>
                </value>
                <value>
                    <fullName>Permitting</fullName>
                </value>
                <value>
                    <fullName>Title Search / Title Insurance</fullName>
                </value>
                <value>
                    <fullName>Appraisal</fullName>
                </value>
                <value>
                    <fullName>Duplication of Benefits analysis</fullName>
                </value>
                <value>
                    <fullName>Acquisition of Properties/Structures (Market Value - Pre or Post Disaster Valuation)</fullName>
                </value>
                <value>
                    <fullName>Closing Costs</fullName>
                </value>
                <value>
                    <fullName>Project Management</fullName>
                </value>
                <value>
                    <fullName>Demolition/Site Restoration/Landfill Tipping Fees/Utility Removal</fullName>
                </value>
                <value>
                    <fullName>Asbestos Testing/Abatement</fullName>
                </value>
                <value>
                    <fullName>Lead Based Paint Testing/Remediation</fullName>
                </value>
                <value>
                    <fullName>EHP Review / Coordination</fullName>
                </value>
                <value>
                    <fullName>Acquisition of Property (Land Only)</fullName>
                </value>
                <value>
                    <fullName>Jacking and Moving Structure</fullName>
                </value>
                <value>
                    <fullName>Dissembling and Reassembling Appurtenances (Porches, Decks, Awnings, Ramps)</fullName>
                </value>
                <value>
                    <fullName>Site Preparation (foundation, water, sewer, utility hookup)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Expense_Name__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Expense Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hourly_Rate__c</fullName>
        <label>Hourly Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Hours__c</fullName>
        <label>Hours</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Item_Name__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Item Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phase__c</fullName>
        <label>Phase</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Phase 1</fullName>
                </value>
                <value>
                    <fullName>Phase 2</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Position__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Position</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pre_Award_Cost__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Pre Award Cost?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Project_Cost__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project Cost</label>
        <referenceTo>Project_Cost__c</referenceTo>
        <relationshipLabel>Project Cost Line Items</relationshipLabel>
        <relationshipName>Project_Cost_Line_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Unit_Cost__c</fullName>
        <label>Unit Cost</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Unit_Measure__c</fullName>
        <label>Unit Measure</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Each</fullName>
                </value>
                <value>
                    <fullName>Mile</fullName>
                </value>
                <value>
                    <fullName>Hour</fullName>
                </value>
                <value>
                    <fullName>Ton</fullName>
                </value>
                <value>
                    <fullName>Acre</fullName>
                </value>
                <value>
                    <fullName>Cubic Foot</fullName>
                </value>
                <value>
                    <fullName>Cubic Yard</fullName>
                </value>
                <value>
                    <fullName>Day</fullName>
                </value>
                <value>
                    <fullName>Linear Foot</fullName>
                </value>
                <value>
                    <fullName>Lump Sum</fullName>
                </value>
                <value>
                    <fullName>Million Board Feet</fullName>
                </value>
                <value>
                    <fullName>Number Of Seats</fullName>
                </value>
                <value>
                    <fullName>Square Foot</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
                <value>
                    <fullName>Square Yard</fullName>
                </value>
                <value>
                    <fullName>Square Yard Per Inch</fullName>
                </value>
                <value>
                    <fullName>Foot</fullName>
                </value>
                <value>
                    <fullName>Inch</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Unit_Quantity__c</fullName>
        <label>Unit Quantity</label>
        <precision>9</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Project Cost Line Item</label>
    <nameField>
        <displayFormat>PCLI-{00000}</displayFormat>
        <label>Project Cost Line Item Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Project Cost Line Items</pluralLabel>
    <recordTypes>
        <fullName>Project_Site_Estimate</fullName>
        <active>true</active>
        <label>Project Site Estimate</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>